Fix paintbrush button hover in high contrast

--- a/src/Themes.scss
+++ b/src/Themes.scss
@@ -2976,7 +2976,7 @@ body.contrast-theme {
         fill: #FFFFFF;
     }
 
-    .CharacterPositionController .IconButton:hover .paintbrush-icon-foreground {
+    .CharacterPositionController .IconButton:hover:not(.IconButton--disabled) .paintbrush-icon-foreground {
         stroke: #FFFFFF;
     }
 
